--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,25 @@
-pytest==6.2.5
+attrs==22.1.0
+beautifulsoup4==4.11.1
+black==22.8.0
+certifi==2022.9.14
+charset-normalizer==2.1.1
+click==8.1.3
 flake8==4.0.1
+idna==3.4
+iniconfig==1.1.1
+mccabe==0.6.1
+mypy-extensions==0.4.3
+packaging==21.3
+pathspec==0.10.1
+platformdirs==2.5.2
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.8.0
+pyflakes==2.4.0
+pyparsing==3.0.9
+pytest==6.2.5
+requests==2.28.1
+soupsieve==2.3.2.post1
+toml==0.10.2
+tomli==2.0.1
+urllib3==1.26.12
