--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,24 @@
+attrs==22.1.0
+beautifulsoup4==4.11.1
+certifi==2022.9.24
+charset-normalizer==2.1.1
+colorama==0.4.6
 flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+idna==3.4
+iniconfig==1.1.1
+mccabe==0.7.0
+packaging==21.3
 pep8-naming==0.13.2
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pyparsing==3.0.9
 pytest==7.1.3
+requests==2.28.1
+soupsieve==2.3.2.post1
+tomli==2.0.1
+urllib3==1.26.12
