--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,40 @@
+asttokens==2.2.1
+attrs==22.2.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+certifi==2022.12.7
+charset-normalizer==2.1.1
+colorama==0.4.6
+decorator==5.1.1
+executing==1.2.0
 flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+idna==3.4
+iniconfig==1.1.1
+ipython==8.7.0
+ipython-beautifulsoup==0.3
+jedi==0.18.2
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+packaging==22.0
+parso==0.8.3
 pep8-naming==0.13.2
+pickleshare==0.7.5
+pluggy==1.0.0
+prompt-toolkit==3.0.36
+pure-eval==0.2.2
+py==1.11.0
+pycodestyle==2.9.1
+pyflakes==2.5.0
+Pygments==2.13.0
 pytest==7.1.3
+requests==2.28.1
+six==1.16.0
+soupsieve==2.3.2.post1
+stack-data==0.6.2
+tomli==2.0.1
+traitlets==5.8.0
+urllib3==1.26.13
+wcwidth==0.2.5
