--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,60 @@
+attrs==22.1.0
+beautifulsoup4==4.11.1
+CacheControl==0.12.11
+cachy==0.3.0
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+cleo==1.0.0a5
+crashtest==0.3.1
+cryptography==37.0.4
+distlib==0.3.6
+dulwich==0.20.46
+fake-useragent==1.1.1
+filelock==3.8.0
 flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+html5lib==1.1
+idna==3.4
+iniconfig==2.0.0
+jaraco.classes==3.2.3
+jeepney==0.8.0
+jsonschema==4.16.0
+keyring==23.9.3
+lockfile==0.12.2
+lxml==4.9.2
+mccabe==0.7.0
+more-itertools==8.14.0
+msgpack==1.0.4
+packaging==21.3
 pep8-naming==0.13.2
+pexpect==4.8.0
+pipenv==2022.11.5
+pkginfo==1.8.3
+platformdirs==2.5.2
+pluggy==1.0.0
+poetry==1.2.2
+poetry-core==1.3.2
+poetry-plugin-export==1.1.2
+ptyprocess==0.7.0
+py==1.11.0
+pycodestyle==2.9.1
+pycparser==2.21
+pyflakes==2.5.0
+pylev==1.4.0
+pyparsing==3.0.9
+pyrsistent==0.18.1
 pytest==7.1.3
+requests==2.28.1
+requests-toolbelt==0.9.1
+SecretStorage==3.3.3
+shellingham==1.5.0
+soupsieve==2.3.2.post1
+tomli==2.0.1
+tomlkit==0.11.5
+urllib3==1.26.12
+virtualenv==20.16.6
+virtualenv-clone==0.5.7
+webencodings==0.5.1
