--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-flake8==5.0.4
-flake8-annotations==2.9.1
-flake8-quotes==3.3.1
+attrs==22.2.0
+beautifulsoup4==4.11.1
+certifi==2022.12.7
+charset-normalizer==3.0.1
+flake8==6.0.0
+flake8-annotations==3.0.0
+flake8-quotes==3.3.2
 flake8-variables-names==0.0.5
-pep8-naming==0.13.2
-pytest==7.1.3
+idna==3.4
+iniconfig==2.0.0
+mccabe==0.7.0
+packaging==23.0
+pep8-naming==0.13.3
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.9.1
+pyflakes==2.5.0
+pytest==7.2.1
+requests==2.28.2
+soupsieve==2.3.2.post1
+tomli==2.0.1
+urllib3==1.26.14
