--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 attrs==22.2.0
 beautifulsoup4==4.11.1
+black==22.12.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
+click==8.1.3
+exceptiongroup==1.1.0
 flake8==6.0.0
 flake8-annotations==3.0.0
 flake8-quotes==3.3.2
@@ -9,8 +12,11 @@ flake8-variables-names==0.0.5
 idna==3.4
 iniconfig==2.0.0
 mccabe==0.7.0
+mypy-extensions==0.4.3
 packaging==23.0
+pathspec==0.11.0
 pep8-naming==0.13.3
+platformdirs==2.6.2
 pluggy==1.0.0
 py==1.11.0
 pycodestyle==2.9.1
