--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,28 @@
-flake8==5.0.4
-flake8-annotations==2.9.1
-flake8-quotes==3.3.1
-flake8-variables-names==0.0.5
-pep8-naming==0.13.2
-pytest==7.1.3
+Package                Version
+---------------------- ---------
+attrs                  22.2.0
+beautifulsoup4         4.11.2
+certifi                2022.12.7
+charset-normalizer     3.0.1
+colorama               0.4.6
+flake8                 5.0.4
+flake8-annotations     2.9.1
+flake8-quotes          3.3.1
+flake8-variables-names 0.0.5
+idna                   3.4
+iniconfig              2.0.0
+mccabe                 0.7.0
+packaging              23.0
+pep8-naming            0.13.2
+pip                    21.3.1
+pluggy                 1.0.0
+py                     1.11.0
+pycodestyle            2.9.1
+pyflakes               2.5.0
+pytest                 7.1.3
+requests               2.28.2
+setuptools             60.2.0
+soupsieve              2.4
+tomli                  2.0.1
+urllib3                1.26.14
+wheel                  0.37.1
