--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+flake8==5.0.4
 attrs==22.2.0
 beautifulsoup4==4.12.0
 black==23.3.0
@@ -7,7 +8,7 @@ click==8.1.3
 colorama==0.4.6
 flake8==6.0.0
 flake8-annotations==2.9.1
-flake8-quotes==3.3.2
+flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
 idna==3.4
 mccabe==0.7.0
@@ -15,6 +16,7 @@ mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.1
 pep8-naming==0.13.2
+pytest==7.1.3
 platformdirs==3.2.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
