--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,8 @@
-flake8==6.0.0
-attrs==22.2.0
-beautifulsoup4==4.12.0
-black==23.3.0
-certifi==2022.12.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
+flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
-idna==3.4
-mccabe==0.7.0
-mypy-extensions==1.0.0
-packaging==23.0
-pathspec==0.11.1
 pep8-naming==0.13.2
 pytest==7.1.3
-platformdirs==3.2.0
-pycodestyle==2.10.0
-pyflakes==3.0.1
-requests==2.28.2
-soupsieve==2.4
-tomli==2.0.1
-typing_extensions==4.5.0
-urllib3==1.26.15
+requests~=2.28.2
+beautifulsoup4~=4.11.1
