--- a/requirements.txt
+++ b/requirements.txt
@@ -5,17 +5,19 @@ certifi==2022.12.7
 charset-normalizer==3.1.0
 click==8.1.3
 colorama==0.4.6
-flake8==6.0.0
+exceptiongroup==1.1.1
 flake8-annotations==2.9.1
 flake8-quotes==3.3.2
 flake8-variables-names==0.0.5
 idna==3.4
+iniconfig==2.0.0
 mccabe==0.7.0
 mypy-extensions==1.0.0
 packaging==23.0
 pathspec==0.11.1
 pep8-naming==0.13.2
 platformdirs==3.2.0
+pluggy==1.0.0
 pycodestyle==2.10.0
 pyflakes==3.0.1
 requests==2.28.2
