--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,36 @@
+async-generator==1.10
+attrs==23.1.0
+beautifulsoup4==4.12.2
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+colorama==0.4.6
+exceptiongroup==1.1.1
 flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+h11==0.14.0
+idna==3.4
+iniconfig==2.0.0
+mccabe==0.7.0
+outcome==1.2.0
+packaging==23.1
 pep8-naming==0.13.2
+pluggy==1.0.0
+py==1.11.0
+pycodestyle==2.9.1
+pycparser==2.21
+pyflakes==2.5.0
+PySocks==1.7.1
 pytest==7.1.3
+requests==2.30.0
+selenium==4.9.0
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+tomli==2.0.1
+trio==0.22.0
+trio-websocket==0.10.2
+urllib3==1.26.15
+wsproto==1.2.0
