--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,22 @@
-flake8==5.0.4
-flake8-annotations==2.9.1
-flake8-quotes==3.3.1
-flake8-variables-names==0.0.5
-pep8-naming==0.13.2
-pytest==7.1.3
+async-generator==1.10
+attrs==23.1.0
+beautifulsoup4==4.12.2
+certifi==2022.12.7
+charset-normalizer==3.1.0
+exceptiongroup==1.1.1
+h11==0.14.0
+idna==3.4
+outcome==1.2.0
+pip==22.3.1
+PySocks==1.7.1
+requests==2.29.0
+selenium==4.9.0
+setuptools==65.6.3
+sniffio==1.3.0
+sortedcontainers==2.4.0
+soupsieve==2.4.1
+trio-websocket==0.10.2
+trio==0.22.0
+urllib3==1.26.15
+wheel==0.38.4
+wsproto==1.2.0
