--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -29,5 +29,4 @@ jobs:
 
       - name: Run tests
         timeout-minutes: 5
-        run: pytest --driver Chrome --headless --disable-gpu -v tests/
-
+        run: pytest tests/
