--- a/requirements.txt
+++ b/requirements.txt
@@ -19,13 +19,21 @@ py==1.11.0
 pycodestyle==2.9.1
 pyflakes==2.5.0
 PySocks==1.7.1
-pytest==7.1.3
+pytest==6.2.5
+pytest-base-url==2.0.0
+pytest-html==3.2.0
+pytest-metadata==2.0.4
+pytest-selenium==4.0.0
+pytest-variables==2.0.0
 python-dotenv==1.0.0
 requests==2.30.0
 selenium==4.9.1
+six==1.16.0
 sniffio==1.3.0
 sortedcontainers==2.4.0
 soupsieve==2.4.1
+tenacity==6.3.1
+toml==0.10.2
 tomli==2.0.1
 tqdm==4.65.0
 trio==0.22.0
