--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,23 @@
+attrs==23.1.0
+beautifulsoup4==4.12.2
+certifi==2023.7.22
+charset-normalizer==3.2.0
+colorama==0.4.6
 flake8==5.0.4
 flake8-annotations==2.9.1
 flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
+idna==3.4
+iniconfig==2.0.0
+mccabe==0.7.0
+packaging==23.1
 pep8-naming==0.13.2
+pluggy==1.2.0
+py==1.11.0
+pycodestyle==2.9.1
+pyflakes==2.5.0
 pytest==7.1.3
+requests==2.31.0
+soupsieve==2.4.1
+tomli==2.0.1
+urllib3==2.0.4
