--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,12 @@ beautifulsoup4==4.12.2
 certifi==2023.7.22
 charset-normalizer==3.2.0
 idna==3.4
+flake8==6.1.0
+flake8-annotations==3.0.1
+flake8-quotes==3.3.2
+flake8-variables-names==0.0.6
+pep8-naming==0.13.3
+pytest==7.4.0
 requests==2.31.0
 soupsieve==2.4.1
 urllib3==2.0.4
