--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,17 @@ flake8-quotes==3.3.1
 flake8-variables-names==0.0.5
 pep8-naming==0.13.2
 pytest==7.1.3
+
+requests~=2.31.0
+beautifulsoup4~=4.12.2
+py~=1.11.0
+colorama~=0.4.6
+pip~=22.3.1
+attrs~=23.1.0
+wheel~=0.38.4
+pyflakes~=2.5.0
+pycodestyle~=2.9.1
+pluggy~=1.3.0
+iniconfig~=2.0.0
+setuptools~=65.5.1
+packaging~=23.2
